# UpSetPlot

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CHANGELOG.rst  LICENSE  README.rst  conftest.py  pyproject.toml  setup.cfg  setup.py  test_example.py  test_requirements.txt
.github/workflows/: lint.yml  test.yml  upload-to-pypi.yml
doc/: DataFormatGuide.ipynb  DataFormatGuide.rst  Makefile  api.rst  changelog.rst  conf.py  formats.ipynb  index.rst  requirements.txt
doc/auto_examples/: generated_data.py  plot_generated.py
examples/: README.txt  plot_boston.py  plot_customize_after_plot.py  plot_diabetes.py  plot_discrete.py  plot_generated.py  plot_hide.py  plot_highlight.py  plot_highlight_categories.py  plot_missingness.py  plot_sizing.py  plot_theming.py  plot_vertical.py  specify_parameters.py
upsetplot/: __init__.py  data.py  plotting.py  reformat.py  util.py
upsetplot/tests/: test_data.py  test_examples.py  test_reformat.py  test_upsetplot.py
