[metadata]
description = Draw Lex et al.'s UpSet plots with Pandas and Matplotlib
long_description = file: README.rst
author = Joel Nothman
author_email = joel.nothman@gmail.com
url = https://upsetplot.readthedocs.io
license = BSD 3-Clause License
classifiers =
	Programming Language :: Python :: 2
	Programming Language :: Python :: 2.7
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6

[aliases]
test = pytest

[tool:pytest]
addopts = --doctest-modules --verbose --cov=upsetplot --showlocals
# --cov=upsetplot
testpaths = upsetplot README.rst
doctest_optionflags = ALLOW_UNICODE

[flake8]
ignore = W503,W504
