[metadata]
description = Draw Lex et al.'s UpSet plots with Pandas and Matplotlib
long_description = file: README.rst
author = Joel Nothman
author_email = joel.nothman@gmail.com
url = https://upsetplot.readthedocs.io
license = BSD 3-Clause License
classifiers =
    License :: OSI Approved :: BSD License
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.10
	Topic :: Scientific/Engineering :: Visualization
	Intended Audience :: Science/Research

[aliases]
test = pytest

[tool:pytest]
addopts = --doctest-modules --verbose --cov=upsetplot --showlocals
# --cov=upsetplot
testpaths = upsetplot README.rst
doctest_optionflags = ALLOW_UNICODE NORMALIZE_WHITESPACE ELLIPSIS

[flake8]
ignore = W503,W504
